# Doctor_backend

./: .flake8  .gitignore  bandit.yaml  dump.rdb  manage.py  pyproject.toml  pytest.ini
api/: admin.py  models.py  serializers.py  tasks.py  translation.py  views.py
blog/: admin.py  models.py  serializers.py  translation.py  views.py
chat/: admin.py  models.py  views.py
evants/: apps.py  models.py  serializers.py  views.py
my_doctor/: asgi.py  authentication.py  celery.py  urls.py  urls_admin.py  utils.py  wsgi.py
my_doctor/settings/: .env.example  settings.py  settings_admin.py  settings_base.py
my_doctor/user_agent_parser/: UserAgent.py  UserAgentParser.py  _info.py  _regexes.py  ua_parser.py
sockets/: consumers.py
tests/: test_login.py  test_logout.py  test_register.py  test_verifay.py
tests/mock/: mock_user.py
utils/: email_virify_token.py
